test/libsolidity/syntaxTests/constructor/external_constructor.sol
contract test {
	constructor() external {}
}
// ----
// TypeError 9239: (17-42): Constructor must be public or internal.
